components/cost-management/staging/policies/validate-cost-management-labels-vap/.chainsaw-test/resources/namespace-cost-center.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ($namespace)
  labels:
    konflux-ci.dev/type: tenant
    cost-center: ($cost_center)
    insights_cost_management_optimizations: "true"
